syntax = "proto3";

package api_goods;

option go_package = "api_goods";

import "api_goods/common.proto";


//根据id获取商品列表
message GetGoodsListReq {
    repeated uint64 spu_ids = 1;
}

message GetGoodsListRsp {
    int32 code = 1;
    string msg = 2;
    string log_id = 3;
    GetGoodsListRspData data = 4;
    message GetGoodsListRspData {
        repeated GoodsSpu spu_list = 1;
    }
}

// 商品详情页
message GetGoodsDetailReq{
    uint64 spu_id = 1;
}

message GetGoodsDetailRsp{
    int32 code = 1;
    string msg = 2;
    string log_id = 3;
    GetGoodsDetailRspData data = 4;
    message GetGoodsDetailRspData {
        GoodsSpu spu = 1;
    }

}   



// 发布商品
message PublishGoodsReq{
    uint64 category_id = 1;
    string category_name = 2;
    uint64 brand_id = 3;
    string brand_name = 4;
    string spu_name = 5;
    string spu_desc = 6;
    string spu_price = 7;
    string spu_img_url = 8;

    // 规格
    repeated PublishSku sku_list = 9;
    // 属性
    repeated PublishAttribute attribute_list = 10;

    message PublishSku {
    uint64 stock_num = 1;
    string sku_price = 2;
    repeated PublishSpecValue spec_key_value = 3;
    }

    message PublishAttribute{
        string attribute_name = 1;
        string attribute_value = 2;
    }

    message PublishSpecValue {
        string spec_name = 1;
        string spec_value = 2;
    }
}

message PublishGoodsRsp {
    int32 code = 1;
    string msg = 2;
    string log_id = 3;
    PublishGoodsRspData data = 4;
    message PublishGoodsRspData {
        uint64 spu_id = 1;
    }
}

// 详细的spu信息，加上了 sku 和 规格项
message GoodsSpu {
    BaseSpu spu = 1;
    repeated GoodsSku sku_list = 2;
    repeated BaseSpec spec_list = 3;   // 可选规格项
}

// sku信息
message GoodsSku {
    BaseSku sku = 1;
    repeated BaseSpecValue spec_value_list = 6; // 可选规格值
}