syntax = "proto3";

// protobuf的package，根据业务来定，一个文件夹下的package得是一样的
package example;

// 和package保持一致
option go_package = "example";


// 请求体: XXXReq
message PingReq{
    uint64 uid = 1;
}

// 响应体: XXXRsp
// 结构统一长这样: 错误码、错误信息、日志id、数据
message PingRsp{
    int32 code = 1; // 错误码
    string msg = 2; // 信息
    string log_id = 3; // 链路追踪id
    PingData data = 4; // 响应体数据
    message PingData {
        uint64 id = 1;
        string message = 2;
        string created_at = 3;
        string updated_at = 4;
        string deleted_at = 5;
    }
}
