syntax="proto3";

package user;

option go_package="/user";

import "api.proto";

service UserService {
  rpc Register(RegisterReq) returns (RegisterResp) {
    option (api.post) = "/user/register";
  }
  rpc Login(LoginReq) returns (LoginResp) {
    option (api.post) = "/user/login";
  }
}

message RegisterReq {
  string email = 1;
  string password = 2;
  string confirm_password = 3;
}

message RegisterResp {
  int32 user_id = 1;
}

message LoginReq {
  string email= 1;
  string password = 2;
}

message LoginResp {
  int32 user_id = 1;
}