syntax = "proto3";

// protobuf的package，根据业务来定，一个文件夹下的package得是一样的
package order;

// 和package保持一致
option go_package = "order";

// 导入需要使用的文件，package/文件名
import "order/create_trade.proto";
import "order/cancel_trade.proto";

service OrderService {

    // 创建一笔交易
    rpc CreateTrade(CreateTradeReq) returns (CreateTradeRsp) {}

    // 取消一笔交易
    rpc CancelTrade(CancelTradeReq) returns (CancelTradeRsp) {}
}

